# espers

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain  shell.nix  shell1.nix  toolchain.toml
espdump/: Cargo.toml
espdump/src/: main.rs
espers/: Cargo.toml
espers/src/: common.rs  error.rs  game.rs  lib.rs  plugin.rs  string_table.rs
espers/src/fields/: anam.rs  avsk.rs  bamt.rs  bids.rs  bmct.rs  bpnd.rs  bpni.rs  bpnn.rs  bpnt.rs  bptn.rs  cnam.rs  cnto.rs  coct.rs  coed.rs  cscr.rs  csfl.rs  csgd.rs  cslr.rs  csmd.rs  csme.rs  ctda.rs  data.rs  desc.rs  dest.rs  dnam.rs  edid.rs  efid.rs  efit.rs  enam.rs  enit.rs  fcht.rs  fltv.rs  fnam.rs  fnmk.rs  fnpr.rs  fprt.rs  full.rs  gnam.rs  hnam.rs  idla.rs  (+60 more)
espers/src/records/: aact.rs  achr.rs  acti.rs  addn.rs  alch.rs  ammo.rs  anio.rs  appa.rs  arma.rs  armo.rs  arto.rs  aspc.rs  astp.rs  avif.rs  book.rs  bptd.rs  cams.rs  cell.rs  clas.rs  clfm.rs  clmt.rs  cobj.rs  coll.rs  cont.rs  cpth.rs  csty.rs  debr.rs  dial.rs  dlbr.rs  dlvw.rs  dobj.rs  door.rs  dual.rs  eczn.rs  efsh.rs  ench.rs  equp.rs  expl.rs  eyes.rs  fact.rs  (+82 more)
espers/tests/: read_write.rs  test_read_write.rs  test_string_tables.rs
toiced/: Cargo.toml
toiced/src/: lib.rs
toiced_derive/: Cargo.toml
toiced_derive/src/: lib.rs
vespers/: Cargo.toml
vespers/src/: app.rs  main.rs
vespers/src/widgets/: addn.rs  aspc.rs  book.rs  flst.rs  gmst.rs  kywd.rs  mod.rs  otft.rs
