[package]
name = "vespers"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = ""
documentation = ""
homepage = ""
repository = ""

[dependencies]
espers = { path = "../espers" }
iced = "0.8"
once_cell = "1.17"
ron = "0.8"
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
