[package]
name = "vespers"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = ""
documentation = ""
homepage = ""
repository = ""

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
espers = { path = "../espers" }
iced = "0.8"
iced_aw = "0.4"
once_cell = "1.17"
ron = "0.8"
