[package]
name = "vespers"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = ""
documentation = ""
homepage = ""
repository = ""

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
cosmic-text = "0.9"
espers = { path = "../espers" }
iced = "0.10"
iced_aw = "0.7"
once_cell = "1.18"
rgb = { version = "0.8", features = ["serde"] }
ron = "0.8"

fontdb = { version = "0.14", features = ["fontconfig"] }
